[package]
name = "transparent-proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.49.0", features=["full"]}
tokio-util = "0.7.16"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
